--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello world</h1>
     <script src="./js/task-1.js" defer></script>
+    <script src="./js/task-2.js" defer></script>
 </body>
 </html>
